# python-birthday-reminders

./: .env.example  .gitignore  README.md  birthday_checker.py  birthdaychecker.py  cron_script.sh  excel_loader.py  main.py  pyproject.toml  sendsms.py  test_birthday_checker.py
.github/workflows/: python_test.yml
birthday_reminders/: birthday_checker.py  excel_loader.py  load_and_validate.py  load_env.py  send_message.py
config/: .env.example.toml  __init__.py
tests/: test_birthday_checker.py
